2007-04-07    <tino@firebird.03.softkill.net>

	* dbm.c (check_stdout): added.  All routines which output data now
	are supposed to call check_eof() in the loop to abort when the
	output pipe goes away.

2007-03-26    <tino@firebird.03.softkill.net>

	* dbm.c (db_cmp): bugfix: data_alloc could be set, such that
	free() creates a signal

2007-02-12    <tino@firebird.03.softkill.net>

	* test.sh: improved tests

2007-01-27    <tino@firebird.03.softkill.net>

	* dbm.c (read_key_term_c, read_key_term_s): BUGFIX.  When the
	first read data was empty then kbuf staied NULL, therefor GDBM
	told an error, even when dsize=0.  Seems to be a GDBM feature.

2007-01-23    <tino@firebird.03.softkill.net>

	* dbm.c (get_ul): added for breviness

2007-01-18    <tino@firebird.03.softkill.net>

	* dbm.c (run): main() splitted into 2 routines, as the old main
	got too long.
	(main): "bdel ' ' data" can now do deletes if data matches.
	(db_cmp): improved error output
	(db_delete): added, used by c_delete and c_bdel now.  This changes
	the error messages a little bit.
	(c_export, c_import): added (with a bunch of supporting rountines)
	(db_put): added
	(ex): error output improved: always prefixed by DB name
	(batch_store): altered to use db_put() and new error reporting
	(db_store): improved error output, now uses db_put

2007-01-15  U-KOSH\Administrator  <Administrator@KOSH>

	Kludgy kludges kludged.  I hate this all, it shall be done better
	with a completely new DB interface, but I lack the time.  SIGH.
	
	* dbm.c (db_open): random waiting added to hinder timeout cascades
	of concurrently running jobs under CygWin.  It works.
	(db_close_if): added to allow advanced timeouts.  The call to this
	function is now spreaded widely in the source at vairous places.
	Hopefully I did not forget one.
	(c_bget): bget now operates on partially last lines, too (those
	which do not have a line terminator).  This is not true for the
	bget0 case!  No harm is done.  Usually this was a bug anyway in